# inspectrum

./: CLAUDE.md  CMakeLists.txt
doc/: plugin-api-plan.md  plugins.md
examples/plugins/: energy-detect.json  energy-detect.py
src/: CMakeLists.txt  amplitudedemod.cpp  amplitudedemod.h  annotationdialog.cpp  annotationdialog.h  frequencydemod.cpp  frequencydemod.h  fskdemod.cpp  fskdemod.h  fskpolarplot.cpp  fskpolarplot.h  histogramplot.cpp  histogramplot.h  inputsource.cpp  inputsource.h  latencylog.h  mainwindow.cpp  mainwindow.h  phasedemod.h  plot.h  plots.cpp  plots.h  plotview.cpp  plotview.h  plugin.cpp  plugin.h  samplebuffer.cpp  samplebuffer.h  samplesource.h  spectrogramcontrols.cpp  spectrogramcontrols.h  spectrogramplot.cpp  spectrogramplot.h  traceplot.cpp  traceplot.h  tunertransform.cpp  tunertransform.h  util.cpp
tools/: CMakeLists.txt  fm_filter_compare.cpp  fm_filter_plot.py
